package fr.univ.bordeaux.agonCore.agonElements;

/**
 * Defines the two competing sides in the Agon game. *
 *
 * <p>This enum is used to identify piece ownership, track the current player's turn, and evaluate
 * game states from specific perspectives.
 */
public enum Color {
  /** * Represents the Black player. */
  BLACK,

  /** * Represents the White player. */
  WHITE;
}
