package fr.univ.bordeaux.agonCore.history;

import fr.univ.bordeaux.agonCore.agonElements.Color;
import fr.univ.bordeaux.agonCore.agonElements.Move;
import fr.univ.bordeaux.agonCore.agonElements.PieceType;
import fr.univ.bordeaux.agonCore.bitboard.CoordinateMapper;

import java.util.List;
import java.util.Stack;

/**
 * Manages the history of turns to support undo and redo operations.
 *
 * <p>This class maintains two stacks of {@link HistoryInformations}:</p>
 * *
 * * <ul>
 * <li><b>Undo Stack:</b> Stores the history of moves already played.</li>
 * <li><b>Redo Stack:</b> Stores moves that were undone and are available to be re-applied.</li>
 * </ul>
 * * <p>Following standard command patterns, the redo stack is cleared whenever a new,
 * original move is added to the history to prevent branching timelines.</p>
 */
public class History {

  /** Stack containing turns that can be reverted. */
  private final Stack<HistoryInformations> undoStack = new Stack<>();

  /** Stack containing turns that were reverted and can be re-applied. */
  private final Stack<HistoryInformations> redoStack = new Stack<>();

  /**
   * Initializes an empty game history.
   */
  public History() {
  }

  /**
   * Reconstructs the move history from a list of ABA-pro strings.
   * <p>Parses the text generated by the save file and populates the undo stack.</p>
   *
   * @param textMoves The list of moves parsed from the save file.
   */
  public History(List<String> textMoves) {
    for (String textMove : textMoves) {
      String[] parts = textMove.trim().split("\\s+");

      if (parts.length >= 3) {
        char pieceChar = parts[0].charAt(0);
        int fromIdx = CoordinateMapper.fromCoordinateString(parts[1]);
        int toIdx = CoordinateMapper.fromCoordinateString(parts[2]);

        Color moveColor = (pieceChar == 'O' || pieceChar == 'Q') ? Color.WHITE : Color.BLACK;
        PieceType type = (moveColor == Color.WHITE) ? PieceType.WHITE_PAWN : PieceType.BLACK_PAWN;

        Move mainMove = new Move(fromIdx, toIdx, moveColor, type);
        List<Move> turnMoves = new java.util.ArrayList<>();
        turnMoves.add(mainMove);

        this.undoStack.push(new HistoryInformations(turnMoves, type, moveColor));
      }
    }
  }

  /**
   * Retrieves the most recent turn from the undo stack without removing it.
   * @return The latest {@link HistoryInformations} on the undo stack.
   * @throws java.util.EmptyStackException if the undo stack is empty.
   */
  public HistoryInformations getHeadUndo() {
    return undoStack.peek();
  }

  /**
   * Retrieves the most recent turn from the redo stack without removing it.
   * @return The latest {@link HistoryInformations} on the redo stack.
   * @throws java.util.EmptyStackException if the redo stack is empty.
   */
  public HistoryInformations getHeadRedo() {
    return redoStack.peek();
  }

  /**
   * Records a new turn in the history.
   * <p>The turn is pushed onto the undo stack, and the redo stack is
   * immediately cleared to ensure history consistency.</p>
   * @param informations The {@link HistoryInformations} containing the move sequence to record.
   */
  public void add(HistoryInformations informations) {
    undoStack.push(informations);
    redoStack.clear();
  }

  /**
   * Reverts the last recorded turn.
   * <p>Pops the latest turn from the undo stack and transfers it to the redo stack.</p>
   * @return The {@link HistoryInformations} that was undone,
   * or {@code null} if no moves are available to revert.
   */
  public HistoryInformations undo() {
    if (undoStack.isEmpty()) {
      return null;
    }
    HistoryInformations informations = undoStack.pop();
    redoStack.push(informations);
    return informations;
  }

  /**
   * Re-applies the most recently undone turn.
   * * <p>Pops the turn from the redo stack and transfers it back to the undo stack.</p>
   * @return The {@link HistoryInformations} that was re-applied.
   * @throws java.util.EmptyStackException if the redo stack is empty.
   */
  public HistoryInformations redo() {
    HistoryInformations informations = redoStack.pop();
    undoStack.push(informations);
    return informations;
  }

  /**
   * Checks if there are any turns available to undo.
   * @return {@code true} if the undo stack is empty, {@code false} otherwise.
   */
  public boolean isEmptyUndo() {
    return undoStack.isEmpty();
  }

  /**
   * Checks if there are any turns available to redo.
   * @return {@code true} if the redo stack is empty, {@code false} otherwise.
   */
  public boolean isEmptyRedo() {
    return redoStack.isEmpty();
  }

  /**
   * Converts the list of played turns into ABA-pro text format for saving.
   * <p>Iterates through the undo stack chronologically and formats the primary
   * move of each turn.</p>
   *
   * @return A list of formatted strings, e.g., ["O c3 c5", "X e6 f5"]
   */
  public List<String> toTextList() {
    List<String> textMoves = new java.util.ArrayList<>();

    for (HistoryInformations info : this.undoStack) {
      if (info.getMoves().isEmpty()) continue;

      Move primaryMove = info.getMoves().get(0);

      String start = CoordinateMapper.toCoordinate(primaryMove.getFrom());
      String end = CoordinateMapper.toCoordinate(primaryMove.getTo());

      char pieceChar = (info.getColor() == Color.WHITE) ? 'O' : 'X';

      textMoves.add(pieceChar + " " + start + " " + end);
    }
    return textMoves;
  }
}