@startuml
'https://plantuml.com/class-diagram

package agoncore {

    package agonelements {
        enum Color {
            BLACK
            WHITE
        }

        class Move {
        }

        enum PieceType {
            QUEEN
            NOBLE
        }
    }

    package bitboard {
        interface AgonBoard extends RestrictedAgonBoard{
                    + applyMove(move: Move): boolean
                    + undoMove(): boolean
                    + redoMove(): boolean
                    + isGameWon(color: Color): boolean
                    + getMobility(index: int): int
                    + getCentrality(index: int): int
                    + initBaseConfiguration(): void
                    + getHistory(): List<HistoryInformations>
                    + getHistoryAsText(): List<String>
                    + toTextList(): List<String>
                    + hasPiecesToRelocate(color: Color): boolean
                }



        interface RestrictedAgonBoard {
            + getPieceAt(index: int): PieceType
            + List<Move> generateLegalMoves(Color color)

        }
        class Bitboard{
        }
        class AgonBoardImpl implements AgonBoard{
        }

        class CoordinateMapper {
        }

        enum Direction {
            N, NE, SE, S, SW, NW
        }
    }

    package history {
        class History {
        }
        class HistoryInformations {
        }
    }
}
History -- AgonBoardImpl
Move -- HistoryInformations
Move -- PieceType
Move -- Color
HistoryInformations -- History
AgonBoardImpl -- Bitboard
AgonBoardImpl --> CoordinateMapper
Bitboard --> Direction

@enduml
